Move assets to src folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
       "@molecules": ["./src/ui/molecules"],
       "@organisms": ["./src/ui/organisms"],
       "@hooks": ["./src/hooks"],
-      "@assets": ["./public/assets"],
+      "@assets": ["./src/assets"],
 
     }
   },
