--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "classnames": "^2.3.2",
     "identity-obj-proxy": "^3.0.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "@babel/preset-typescript": "^7.23.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/aos": "^3.0.7",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
